syntax = "proto3";

option csharp_namespace = "Soit.System.Protos";

package Soit.System;

service AuthenticateService {
  rpc Login(LoginRequest) returns (LoginReply);
}

message LoginReply {
  int64 user_id = 1;
  string legal_name = 2;
  string token = 3;
  int64 expire_at = 4;
}

message LoginRequest {
  string user_name = 1;
  string cipher = 2;
}